# pyDownload

./: .gitignore  README.md  pyproject.toml
src/pyDownload/: pyDownload.py
testing/: test_main.py
