[project]
authors = [
  {name = "lic12138", email = "q1061628649@gmail.com"},
]
dependencies = ["requests (>=2.32.3,<3.0.0)", "aiohttp (>=3.11.11,<4.0.0)", "aiofiles (>=24.1.0,<25.0.0)"]
description = ""
license = {text = "MIT"}
name = "pydownload"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[[tool.poetry.source]]
name = "mirrors"
priority = "primary"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
ruff = "^0.9.2"

[tool.poe.tasks]
test = "pytest"
testD = "pytest -s"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "./pytestdebug.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "debug"
log_file_mode = "w+"
log_format = "%(asctime)s %(levelname)s %(message)s"
addopts = "--test-dir=./pydownload_test"